homepage - fix letter spacing

--- a/app/styles/global.css
+++ b/app/styles/global.css
@@ -48,8 +48,8 @@ body {
 .font-size-2 {
   font-size: 2rem;
 }
-.font-size-6-25 {
-  font-size: 6.25rem;
+.font-size-5 {
+  font-size: 5rem;
 }
 
 /* letter-spacing */
@@ -59,6 +59,9 @@ body {
 }
 .letter-space-02 {
   letter-spacing: 0.2rem;
+}
+.letter-space-0 {
+  letter-spacing: 0;
 }
 /* font-style */
 
@@ -155,8 +158,8 @@ body {
   width: 18rem;
 }
 /* hr of background */
-.width-37-5 {
-  width: 37.5rem;
+.width-35 {
+  width: 35rem;
 }
 
 /* background */
@@ -183,8 +186,8 @@ body {
 .height-21-2 {
   height: 21.2rem;
 }
-.height-60 {
-  height: 60rem;
+.height-70 {
+  height: 70rem;
 }
 
 /* borders */
@@ -321,11 +324,11 @@ body {
 
 @media screen and (min-width: 200px) and (max-width: 280px) {
   /* chalet title */
-  .font-size-6-25 {
+  .font-size-5 {
     font-size: 3rem;
   }
   /* hr chalet */
-  .width-37-5 {
+  .width-35 {
     display: none;
   }
   .subtitle-size,
@@ -375,7 +378,7 @@ body {
 
 @media screen and (min-width: 300px) and (max-width: 600px) {
   /* chalet title */
-  .font-size-6-25 {
+  .font-size-5 {
     font-size: 2.5rem;
   }
   .letter-space-2 {
@@ -387,10 +390,10 @@ body {
   .padding-top-1-25 {
     padding-top: 0.7rem;
   }
-  .height-60 {
+  .height-70 {
     height: 55rem;
   }
-  .width-37-5 {
+  .width-35 {
     display: none;
   }
   .width-50 {
@@ -423,10 +426,10 @@ body {
 }
 
 @media screen and (min-width: 500px) and (max-width: 782px) {
-  .font-size-6-25 {
+  .font-size-5 {
     font-size: 5.5rem;
   }
-  .width-37-5 {
+  .width-35 {
     width: 17rem;
   }
   .max-width {
@@ -438,8 +441,8 @@ body {
 }
 
 @media screen and (min-width: 700px) and (max-width: 900px) {
-  .font-size-6-25 {
-    font-size: 6.5rem;
+  .font-size-5 {
+    font-size: 5rem;
   }
   .letter-space-2 {
     letter-spacing: 2.8rem;
@@ -448,19 +451,19 @@ body {
     max-width: 40rem;
   }
   .width-18 {
-    width: 22.5rem;
+    width: 23rem;
   }
-  .height-60 {
+  .height-70 {
     height: 70rem;
   }
   .media-padding-top {
-    padding-top: 18rem;
+    padding-top: 10rem;
   }
 }
 
 @media screen and (min-width: 900px) and (max-width: 1200px) {
-  .font-size-6-25 {
-    font-size: 8rem;
+  .font-size-5 {
+    font-size: 4.5rem;
   }
   .width-18 {
     width: 12rem;
@@ -471,13 +474,45 @@ body {
   .font-size-11 {
     font-size: 0.9rem;
   }
-  .height-60 {
-    height: 85rem;
+  .height-70 {
+    height: 50rem;
   }
   .media-padding-top {
-    padding-top: 18rem;
+    padding-top: 4rem;
+  }
+  .width-35 {
+    width: 30rem;
   }
   .max-width {
     max-width: 48rem;
+  }
+  .background-media {
+    background-size: 100%;
+    background-repeat: no-repeat;
+  }
+}
+
+@media screen and (min-width: 1200px) and (max-width: 1600px) {
+  .background-media {
+    background-size: 100%;
+    background-repeat: no-repeat;
+  }
+
+  .height-60 {
+    height: 65rem;
+  }
+}
+
+@media screen and (min-width: 1500px) {
+  .font-size-5 {
+    font-size: 6rem;
+  }
+  .background-media {
+    background-size: 100%;
+    background-repeat: no-repeat;
+  }
+
+  .height-60 {
+    height: 70rem;
   }
 }
